--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- Main CSS Styles Sheet -->
-    <link rel="stylesheet" href="css/styles2.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <title>Perfect Striping</title>
 
@@ -98,27 +98,17 @@
     
     <div class="container">
         <div class="row">
-            <div class="col col-sm-6 patrat">
+            <div class="col-md-6 square mb-3">
                 <h2>Parking Striping</h2>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. 
                 </p>
             </div>
-            <div class="col col-sm-6">
+            <div class="col-md-6 mb-3">
                 <img src="images/stripindex.jpg" alt="Parking lot photo" class="indexphoto">
             </div>
         </div>
-        <div class="row">
-            <div class="col col-md-6">
-                <img src="images/stripindex.jpg" alt="Parking lot photo" class="indexphoto">
-            </div>
-            <div class="col col-md-6 patrat">
-                <h2>Parking Striping</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget.
-                </p>
-            </div>
-        </div>
+
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
