--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
                 <p>A dsnas asdlkjakls lasjdljasdlk jalkdjal jdla jlaj sdla dlajsd lajsdl al jlaksj laksj lasjd laj la jlsdj laksjdlaksj lja lkjasld </p>
             </div>
             <div class="col-md-6 rounded textindex">
-                <h2>Perfect Striping</h2>
-                <p>A dsnas asdlkjakls lasjdljasdlk jalkdjal jdla jlaj sdla dlajsd lajsdl al jlaksj laksj lasjd laj la jlsdj laksjdlaksj lja lkjasld </p>
+                <h2>Seal Coating</h2>
+                <p class="pl-3 pr-3">Our crew of sealcoating experts will develop a long-term plan of action for your asphalt driveway. In combination with the top of the line materials, we can protect your asphalt for many years. We know how important your driveway is to the safety of you, your family, and your car. That is why <a href="contactus.html">Read More...</a></p>
             </div>
             
             <div class="col-md-6 rounded">
-                <img src="images/world.jpg" alt="Pic" class="img-fluid rounded">
+                <img src="images/Sealcoating.jpg" alt="Sealcoating photo" class="img-fluid rounded">
             </div>
             <div class="w-100"></div>
             <div class="col-md-6">
@@ -144,10 +144,11 @@
     </div>
     
     <div class="d-flex flex-column justify-content-center footer">
-       <span class="align-self-center">
+      <p class="align-self-center pb-3">Follow Us</p>
+       <span class="align-self-center pb-2">
             <a href="https://www.facebook.com/perfectstriping/" class="pr-3"><img src="images/facebook.svg" alt="Facebook logo" class="rounded"></a>
             <a href="https://www.youtube.com/user/perfectstripe1" class="pr-3"><img src="images/youtube-square.svg" alt="Youtube logo" class="rounded"></a>
-            <a href="https://www.instagram.com/perfectstriping/"><img src="images/instagram.svg" alt="Instagram logo" class="rounded"></a>
+            <a href="https://www.instagram.com/perfectstriping/"><img src="images/instagram.png" alt="Instagram logo" class="rounded"></a>
         </span>
         <p class="pl-5 pt-2">Lic # 983424</p>
     </div>
