--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="aboutus.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
+                        <a class="nav-link" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gallery</a>
+                        <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Testimonials</a>
+                        <a class="nav-link" href="testimonials.html">Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="contactus.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -146,7 +146,7 @@
             <a href="https://www.youtube.com/user/perfectstripe1" class="pr-3"><img src="images/youtube-square.svg" alt="Youtube logo" class="rounded"></a>
             <a href="https://www.instagram.com/perfectstriping/"><img src="images/instagram.png" alt="Instagram logo" class="rounded"></a>
         </span>
-        <p class="pl-5 pt-2">Lic # 983424</p>
+        <p class="pl-5 pt-2 pb-3">Lic # 983424</p>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
