--- a/aboutus.html
+++ b/aboutus.html
@@ -56,10 +56,38 @@
             </div>
         </div>
     </nav>
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalLong">
+  Launch demo modal
+</button>
 
+<!-- Modal -->
+<div class="modal fade" id="ModalLong" tabindex="-1" role="dialog" aria-labelledby="ModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ModalLongTitle">About Us</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>Perfect Striping has established an outstanding reputation in Parking lot striping in San Diego, CA and quality services working to the highest standards in the industry, Located in 2475 Paseo de las Americas San Diego Ca 92154.<br> 
+           
+        We are primarily engaged to parking lot striping and handicap parking regulations we work for all types of commercial &#38; industrial companies, road work, game courts, municipal airports, shopping centers, general office buildings, as well as apartment buildings &#38; condominium associations.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <a  href="contactus.html" class="btn btn-primary">Contact Us</a>
+      </div>
+    </div>
+  </div>
+</div>
 
     <main class="container">
+        <p class="aboutusp">Perfect Striping has established an outstanding reputation in Parking lot striping in San Diego, CA and quality services working to the highest standards in the industry, Located in 2475 Paseo de las Americas San Diego Ca 92154.
 
+        We are primarily engaged to parking lot striping and handicap parking regulations we work for all types of commercial &#38; industrial companies, road work, game courts, municipal airports, shopping centers, general office buildings, as well as apartment buildings &#38; condominium associations.</p>
     </main>
 
 
