--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand mr-0 p-0 btn " href="#"><img src="images/logo2.png" id="logo" alt="Perfect Striping Logo"></a>
+            <a class="navbar-brand mr-0 btn" href="#"><img src="images/logo.png" id="logo" alt="Perfect Striping Logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -39,7 +39,28 @@
                         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About Us</a>
+                        <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalLong">About Us</a>
+                        <div class="modal fade" id="ModalLong" tabindex="-1" role="dialog" aria-labelledby="ModalLongTitle" aria-hidden="true">
+                          <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title" id="ModalLongTitle">About Us</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                              </div>
+                              <div class="modal-body">
+                                <p>Perfect Striping has established an outstanding reputation in Parking lot striping in San Diego, CA and quality services working to the highest standards in the industry, Located in 2475 Paseo de las Americas San Diego Ca 92154.<br> 
+
+                                We are primarily engaged to parking lot striping and handicap parking regulations. We work for all types of commercial &#38; industrial companies, road work, game courts, municipal airports, shopping centers, general office buildings, as well as apartment buildings &#38; condominium associations.</p>
+                              </div>
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <a  href="contactus.html" class="btn btn-primary">Contact Us</a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="services.html">Services</a>
