--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-toggle="modal" data-target="#ModalLong">About Us</a>
                         <div class="modal fade" id="ModalLong" tabindex="-1" role="dialog" aria-labelledby="ModalLongTitle" aria-hidden="true">
-                          <div class="modal-dialog" role="document">
+                          <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                               <div class="modal-header">
                                 <h5 class="modal-title" id="ModalLongTitle">About Us</h5>
@@ -50,9 +50,9 @@
                                 </button>
                               </div>
                               <div class="modal-body">
-                                <p>Perfect Striping has established an outstanding reputation in Parking lot striping in San Diego, CA and quality services working to the highest standards in the industry, Located in 2475 Paseo de las Americas San Diego Ca 92154.<br> 
+                                <p>&nbsp; &nbsp; &nbsp;Perfect Striping has established an outstanding reputation in Parking lot striping in San Diego, CA and quality services working to the highest standards in the industry, Located in 2475 Paseo de las Americas San Diego Ca 92154.<br> 
 
-                                We are primarily engaged to parking lot striping and handicap parking regulations. We work for all types of commercial &#38; industrial companies, road work, game courts, municipal airports, shopping centers, general office buildings, as well as apartment buildings &#38; condominium associations.</p>
+                                &nbsp; &nbsp; &nbsp;We are primarily engaged to parking lot striping and handicap parking regulations. We work for all types of commercial &#38; industrial companies, road work, game courts, municipal airports, shopping centers, general office buildings, as well as apartment buildings &#38; condominium associations.</p>
                               </div>
                               <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
