--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="row no-gutters pb-5">
             <div class="col-md-6 rounded textindex order-2 order-md-1">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Parking Lot Striping</h2>
-                <p class="px-3 px-xl-4"><strong>Perfect Striping</strong> is proud to be San Diego County`s premier Parking Lot Striping company. <span>We can help with your parking lot re-engineering and a new layout design from start to finish.</span> Organize and redesign your parking lot for an easy traffic flow, making it easy and safe <a href="contactus.html">Read More...</a></p>
+                <p class="px-3 px-xl-4"><strong>Perfect Striping</strong> is proud to be San Diego County`s premier Parking Lot Striping company. <span>We can help with your parking lot re-engineering and a new layout design from start to finish.</span> Organize and redesign your parking lot for an easy traffic flow, making it easy and safe <a href="services.html">Read More...</a></p>
             </div>
 
             <div class="col-md-6 rounded order-1 order-md-2">
@@ -140,11 +140,11 @@
             </div>
             <div class="col-md-6 rounded textindex order-4">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Game Court Painting</h2>
-                <p class="px-3 px-xl-4">Bring families or employees together with activities that everybody can enjoy. <span>From shuffleboard to basketball, we can give you something for all ages</span> <strong>Perfect Striping</strong> can paint lines for any sport or game one can imagine and can even <a href="contactus.html">Read More...</a></p>
+                <p class="px-3 px-xl-4">Bring families or employees together with activities that everybody can enjoy. <span>From shuffleboard to basketball, we can give you something for all ages</span> <strong>Perfect Striping</strong> can paint lines for any sport or game one can imagine and can even <a href="services.html">Read More...</a></p>
             </div>
             <div class="col-md-6 rounded textindex order-6 order-md-5">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Sealcoating and Pavement Maintenance</h2>
-                <p class="px-3 px-xl-4">Our crew of sealcoating experts will develop a long-term plan of action for your asphalt driveway. <span>In combination with the top of the line materials, we can protect your asphalt for many years.</span> We know how important your driveway is to the safety of you, your family, and your car. That is why <a href="contactus.html">Read More...</a></p>
+                <p class="px-3 px-xl-4">Our crew of sealcoating experts will develop a long-term plan of action for your asphalt driveway. <span>In combination with the top of the line materials, we can protect your asphalt for many years.</span> We know how important your driveway is to the safety of you, your family, and your car. That is why <a href="services.html">Read More...</a></p>
             </div>
 
             <div class="col-md-6 rounded order-5 order-md-6">
@@ -155,7 +155,7 @@
             </div>
             <div class="col-md-6 rounded textindex order-8">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Personalised Services</h2>
-                <p class="px-3 px-xl-4"><strong>Perfect Striping</strong> can help you with more services like handicap parking upgrades, parking lot signs, concrete wheel stops, red curbs painting, truncated detectable domes etc. <span>In combination with the top of the line materials, we can protect your asphalt for many years.</span> We know how important your driveway is to the safety of you, your family, and your car. That is why <a href="contactus.html">Read More...</a></p>
+                <p class="px-3 px-xl-4"><strong>Perfect Striping</strong> can help you with more services like handicap parking upgrades, parking lot signs, concrete wheel stops, red curbs painting, truncated detectable domes etc. <span>In combination with the top of the line materials, we can protect your asphalt for many years.</span> We know how important your driveway is to the safety of you, your family, and your car. That is why <a href="services.html">Read More...</a></p>
             </div>
         </div>
     </div>
