--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
     </style>
-
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -23,6 +23,8 @@
     <title>Perfect Striping</title>
 
     <link rel="shortcut icon" href="favicon.ico" />
+    
+    <meta name="google-site-verification" content="lqNvU7bUNyAx0zCSZx4hKfcDOY6GnrCDDoFMedI0fbg" />
 </head>
 
 <body>
@@ -89,21 +91,21 @@
             </ol>
             <div class="carousel-inner shadow-lg">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="/images/carousel21.jpg" alt="First slide">
+                    <img class="d-block w-100" src="/images/index_carousel1.webp" alt="First slide">
                     <div class="carousel-caption d-block">
                         <a href="contactus.html" class="btn btn-outline-primary btn-lg d-none d-sm-inline-block">Get a FREE quote</a>
                         <p>Contact us if you want your parking lot to attract your customers</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/carousel22.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="/images/index_carousel2.webp" alt="Second slide">
                     <div class="carousel-caption d-block">
                         <a href="contactus.html" class="btn btn-outline-primary btn-lg d-none d-sm-inline-block">Get a FREE quote</a>
                         <p>Want to play your favorite game on your newly painted gaming court?</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/carousel23.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="/images/index_carousel3.webp" alt="Third slide">
                     <div class="carousel-caption d-block">
                         <a href="contactus.html" class="btn btn-outline-primary btn-lg d-none d-sm-inline-block">Get a FREE quote</a>
                         <p>Get the best professionals in the San Diego county</p>
@@ -122,14 +124,14 @@
     </main>
 
     <div class="worker-container">
-        <img src="images/tool.png" class="worker" id="worker" alt="Worker logo">
+        <img src="images/tool.png" class="worker pt-3" id="worker" alt="Worker logo">
     </div>
 
     <div class="container squares">
         <div class="row no-gutters pb-5">
             <div class="col-md-6 rounded textindex order-2 order-md-1">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Parking Lot Striping</h2>
-                <p class="px-3 px-xl-4"><strong>Perfect Striping</strong> is proud to be San Diego County`s premier Parking Lot Striping company. <span>We can help with your parking lot re-engineering and a new layout design from start to finish.</span> Organize and redesign your parking lot for an easy traffic flow, making it easy and safe <a href="services.html">Read More...</a></p>
+                <p class="px-3 px-xl-4"><strong>Perfect Striping</strong> is proud to be San Diego County`s premier Parking Lot Striping company. <span>We can help with your parking lot re-engineering and a new layout design from start to finish.</span> Organize and redesign your parking lot for an easy traffic flow, making it easy and safe. Check out all of our <a href="services.html">Services</a></p>
             </div>
 
             <div class="col-md-6 rounded order-1 order-md-2">
@@ -140,22 +142,22 @@
             </div>
             <div class="col-md-6 rounded textindex order-4">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Game Court Painting</h2>
-                <p class="px-3 px-xl-4">Bring families or employees together with activities that everybody can enjoy. <span>From shuffleboard to basketball, we can give you something for all ages</span> <strong>Perfect Striping</strong> can paint lines for any sport or game one can imagine and can even <a href="services.html">Read More...</a></p>
+                <p class="px-3 px-xl-4">Bring families or employees together with activities that everybody can enjoy. <span>From shuffleboard to basketball, we can give you something for all ages.</span> <strong>Perfect Striping</strong> can paint lines for any sport or game one can imagine. Check out all of our <a href="services.html">Services</a></p>
             </div>
             <div class="col-md-6 rounded textindex order-6 order-md-5">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Sealcoating and Pavement Maintenance</h2>
-                <p class="px-3 px-xl-4">Our crew of sealcoating experts will develop a long-term plan of action for your asphalt driveway. <span>In combination with the top of the line materials, we can protect your asphalt for many years.</span> We know how important your driveway is to the safety of you, your family, and your car. That is why <a href="services.html">Read More...</a></p>
+                <p class="px-3 px-xl-4">Our crew of sealcoating experts will develop a long-term plan of action for your asphalt driveway. <span>In combination with the top of the line materials, we can protect your asphalt for many years.</span> We know how important your driveway is to the safety of you, your family, and your car. Check out all of our <a href="services.html">Services</a></p>
             </div>
 
             <div class="col-md-6 rounded order-5 order-md-6">
                 <img src="images/indexsealcoating.jpg" alt="Sealcoating photo" class="img-fluid rounded">
             </div>
             <div class="col-md-6 order-7">
-                <img src="images/world.jpg" alt="Pic" class="img-fluid rounded">
+                <img src="images/indexworld.jpg" alt="Pic" class="img-fluid rounded">
             </div>
             <div class="col-md-6 rounded textindex order-8">
                 <h2 class="pt-lg-2 pt-xl-4 pb-xl-3">Personalised Services</h2>
-                <p class="px-3 px-xl-4"><strong>Perfect Striping</strong> can help you with more services like handicap parking upgrades, parking lot signs, concrete wheel stops, red curbs painting, truncated detectable domes etc. <span>In combination with the top of the line materials, we can protect your asphalt for many years.</span> We know how important your driveway is to the safety of you, your family, and your car. That is why <a href="services.html">Read More...</a></p>
+                <p class="px-3 px-xl-4"><strong>Perfect Striping</strong> can help you with more services like handicap parking upgrades, parking lot signs, concrete wheel stops, red curbs painting, truncated detectable domes etc. <span>In combination with the top of the line materials, we can protect your asphalt for many years.</span> We know how important your driveway is to the safety of you, your family, and your car. Check out all of our <a href="services.html">Services</a></p>
             </div>
         </div>
     </div>
