--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
         <!-- Main CSS Styles Sheet -->
         <link rel="stylesheet" href="css/styles.css">
 
-        <title>Perfect Striping</title>
+        <title>Perfect Striping: Available Services</title>
 
         <link rel="shortcut icon" href="favicon.ico" />
     </head>
