--- a/gallery.html
+++ b/gallery.html
@@ -18,8 +18,11 @@
 
         <!-- Main CSS Styles Sheet -->
         <link rel="stylesheet" href="css/styles.css">
+        
+        <!-- BaguetteBox plugin Styles Sheet -->
+        <link rel="stylesheet" href="css/baguetteBox.min.css">
 
-        <title>Perfect Striping</title>
+        <title>Photos of our work</title>
 
         <link rel="shortcut icon" href="favicon.ico" />
     </head>
@@ -78,9 +81,96 @@
             </div>
         </nav>
 
-        <main class="container">
-
-        </main>
+        <section class="gallery-block compact-gallery">
+            <div class="container">
+                <div class="heading">
+                    <h2>Compact Gallery</h2>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_court1.jpg">
+                            <img class="img-fluid image" src="images/gallery_court1.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_court2.jpg">
+                            <img class="img-fluid image" src="images/gallery_court2.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_court3.jpg">
+                            <img class="img-fluid image" src="images/gallery_court3.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_court4.jpg">
+                            <img class="img-fluid image" src="images/gallery_court4.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                            </a>
+                        </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_court5.jpg">
+                            <img class="img-fluid image" src="images/gallery_court5.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="../img/image6.jpg">
+                            <img class="img-fluid image" src="../img/image6.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="../img/image7.jpg">
+                            <img class="img-fluid image" src="../img/image7.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="../img/image8.jpg">
+                            <img class="img-fluid image" src="../img/image8.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="../img/image9.jpg">
+                            <img class="img-fluid image" src="../img/image9.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <div class="d-flex flex-column justify-content-center footer">
             <p class="align-self-center pb-3">Follow Us</p>
@@ -96,5 +186,9 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script src="js/baguetteBox.min.js"></script>
+        <script>
+            baguetteBox.run('.compact-gallery', { animation: 'slideIn'});
+        </script>
     </body>
 </html>
