--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <style>
         @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
@@ -20,7 +19,7 @@
     <!-- Main CSS Styles Sheet -->
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Perfect Striping</title>
+    <title>Perfect Striping: Home Page</title>
 
     <link rel="shortcut icon" href="favicon.ico" />
     
