--- a/gallery.html
+++ b/gallery.html
@@ -133,8 +133,8 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="../img/image6.jpg">
-                            <img class="img-fluid image" src="../img/image6.jpg">
+                        <a class="lightbox" href="images/gallery_court6.jpg">
+                            <img class="img-fluid image" src="images/gallery_court6.jpg">
                             <span class="description">
                                 <span class="description-heading">Lorem Ipsum</span>
                                 <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
@@ -142,8 +142,8 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="../img/image7.jpg">
-                            <img class="img-fluid image" src="../img/image7.jpg">
+                        <a class="lightbox" href="images/gallery_design.jpg">
+                            <img class="img-fluid image" src="images/gallery_design.jpg">
                             <span class="description">
                                 <span class="description-heading">Lorem Ipsum</span>
                                 <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
@@ -151,8 +151,8 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="../img/image8.jpg">
-                            <img class="img-fluid image" src="../img/image8.jpg">
+                        <a class="lightbox" href="images/gallery_redcurb1.jpg">
+                            <img class="img-fluid image" src="images/gallery_redcurb1.jpg">
                             <span class="description">
                                 <span class="description-heading">Lorem Ipsum</span>
                                 <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
@@ -160,8 +160,17 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-4 item zoom-on-hover">
-                        <a class="lightbox" href="../img/image9.jpg">
-                            <img class="img-fluid image" src="../img/image9.jpg">
+                        <a class="lightbox" href="images/gallery_redcurb2.jpg">
+                            <img class="img-fluid image" src="images/gallery_redcurb2.jpg">
+                            <span class="description">
+                                <span class="description-heading">Lorem Ipsum</span>
+                                <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="col-md-6 col-lg-4 item zoom-on-hover">
+                        <a class="lightbox" href="images/gallery_redcurb3.jpg">
+                            <img class="img-fluid image" src="images/gallery_redcurb3.jpg">
                             <span class="description">
                                 <span class="description-heading">Lorem Ipsum</span>
                                 <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
